--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <div class="site-header-wrapper">
           <div class="nav-container">
             <a href="#" class="logo">Astraiers</a>
-            <ul>
+
+            <button class="hamburger" onclick="toggleMenu()">
+              ☰
+            </button>
+            <ul class="nav-menu">
               <li><a href="#" class="active">Home</a></li>
               <li><a href="#">About me</a></li>
               <li><a href="#">Working</a></li>
@@ -103,7 +107,7 @@
               IT recurse services
             </h4>
             <span>
-              PR for a russian IT recurse <br/>team 
+              Public relations for a Russian IT <br/>recruitment agency
             </span>
             <button class="btn">View More ></button>
           </div>
@@ -114,7 +118,7 @@
               LMS services
             </h4>
             <span>
-              Create a Learning Management System Services UI web
+              Create a Learning Management<br/> System Services UI
             </span>
             <button class="btn">View More ></button>
           </div>
@@ -131,7 +135,7 @@
           <span class="hero-role">Developer, Astraier teams</span>
         </div>
         <span class="hero-quotes"
-          >"With my skills and inspiration, I can help you successfully complete your project."</span
+          >"With my skills and inspiration, I can help you <br class="newLine"/> successfully complete your project."</span
         >
      </section>
    </div>
@@ -174,7 +178,7 @@
         </section>
       </div>
     </div>
-    
+
     <footer>
       <div class="container">
         <div class="footer-wrapper">
